--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 
   <!-- Header -->
   <div class="flex items-center justify-between px-4 pt-4 pb-2">
-    <div class="text-2xl font-light">&larr;</div>
+    <a href="index.html" class="text-2xl font-light">&larr;</a>
     <h1 class="text-lg font-medium">Payment received</h1>
     <div class="w-6"></div> <!-- Placeholder for symmetry -->
   </div>
 
   <!-- Payment Info -->
   <div class="px-4">
-    <div class="flex items-center space-x-3 mt-2">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Airbnb_Logo_Bélo.svg/512px-Airbnb_Logo_Bélo.svg.png" alt="Airbnb Logo" class="w-6 h-6">
-      <div>
-        <p class="text-sm font-bold leading-4">AIRBNB PAYMENTS<br />UK LIMITED</p>
-        <p class="text-sm text-gray-600 mt-1">Feb 8, 05:51 pm</p>
+    <div class="flex items-start justify-between mt-2">
+      <div class="flex items-center space-x-3">
+        <img src="./airbnb-logo.png" alt="Airbnb Logo" class="w-6 h-6">
+        <div>
+          <p class="text-sm font-bold leading-4">AIRBNB PAYMENTS<br />UK LIMITED</p>
+          <p class="text-sm text-gray-600 mt-1">Feb 8, 05:51 pm</p>
+        </div>
       </div>
+      <p class="text-green-600 font-semibold text-sm mr-12">+US$18.92</p>
     </div>
-    <p class="text-green-600 font-semibold text-sm text-right mt-[-32px]">+US$18.92</p>
   </div>
 
   <hr class="my-4 border-t border-gray-200" />
