--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
   <div class="flex items-center justify-between px-4 pt-4 pb-2">
     <a href="index.html" class="text-2xl font-light">&larr;</a>
     <h1 class="text-lg font-medium">Payment received</h1>
-    <div class="w-6"></div> <!-- Placeholder for symmetry -->
+    <div class="w-6"></div>
   </div>
 
-  <!-- Payment Info -->
-  <div class="px-4">
-    <div class="flex items-start justify-between mt-2">
-      <div class="flex items-center space-x-3">
-        <img src="./airbnb-logo.png" alt="Airbnb Logo" class="w-6 h-6">
+  <!-- Payment Info Line -->
+  <div class="px-4 mt-2">
+    <div class="flex items-start justify-between">
+      <!-- Left Side: Image + Text -->
+      <div class="flex space-x-3">
+        <img src="./airbnb-logo.png" alt="Airbnb Logo" class="w-6 h-6 mt-1">
         <div>
-          <p class="text-sm font-bold leading-4">AIRBNB PAYMENTS<br />UK LIMITED</p>
+          <p class="text-sm font-bold leading-tight">
+            AIRBNB PAYMENTS<br>UK LIMITED
+          </p>
           <p class="text-sm text-gray-600 mt-1">Feb 8, 05:51 pm</p>
         </div>
       </div>
-      <p class="text-green-600 font-semibold text-sm mr-12">+US$18.92</p>
+      <!-- Right Side: Amount with extra space -->
+      <div class="pl-4 ml-2">
+        <p class="text-green-600 font-semibold text-sm whitespace-nowrap">+US$18.92</p>
+      </div>
     </div>
   </div>
 
