--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-white text-black font-sans max-w-[430px] mx-auto">
 
   <!-- Header -->
-  <div class="flex items-center justify-between px-4 pt-4 pb-2">
+<div class="flex items-center justify-between px-4 pt-4 pb-2 mb-4">
     <a href="index.html" class="text-2xl font-light">&larr;</a>
     <h1 class="text-lg font-medium">Payment received</h1>
     <div class="w-6"></div>
